--- a/workshops/past-workshops.html
+++ b/workshops/past-workshops.html
@@ -4,8 +4,8 @@ title: Past workshops - The Carpentries
 breadcrumb: Past workshops
 ---
 <div id="workshop-container">
-{% include parts/workshop_list.html %}
+{% include parts/workshop_list.html data=site.data.all_past_workshops %}
 </div>
 <hr/>
 <br/>
-<p class="sm">See upcoming workshops <a href="past_workshops.html" class="link underline">here</a>.</p>
+<p class="sm">See upcoming workshops <a href="{% link workshops/upcoming-workshops.html %}" class="link underline">here</a>.</p>
