set up request workshop sample page

--- a/workshops/host-workshop.html
+++ b/workshops/host-workshop.html
@@ -1,16 +1,12 @@
 ---
 layout: workshops
-title: Hosting a Workshop
+title: Request a workshop
 breadcrumb: Host a Workshop
 ---
 
 
-<section id="about" class="section">
+<section id="request" class="section">
 
-<h2>For workshop Hosts</h2>
+<h2>Request a workshop</h2>
 <p>Sweet croissant ice cream carrot cake cotton candy. Gummi bears toffee apple pie chocolate cheesecake. Jelly-o chocolate bar liquorice toffee dragée macaroon. Brownie pastry gummi bears croissant powder ice cream gummies. Shortbread lollipop cupcake chocolate bar candy cake gummies. Chupa chups apple pie pudding shortbread pastry donut. Candy canes icing candy pie pastry chupa chups. Tart toffee sweet roll dessert cotton candy candy chocolate. Bonbon fruitcake soufflé bear claw halvah jelly sweet jelly-o gummies. Gummies oat cake cake cake marshmallow. Chocolate pastry bonbon pastry marshmallow. Biscuit pastry apple pie carrot cake marzipan donut biscuit tart croissant.</p>
-
-<h2>Handbook</h2>
-
-<p>Read <a href="#">the workshop host Handbook</a> for more information on how to host a Carpentries workshop.</p>
 
