Created new about us drafts

--- a/about-us/careers/index.html
+++ b/about-us/careers/index.html
@@ -3,13 +3,33 @@ layout: about_us
 title: Careers
 breadcrumb: Careers
 ---
-<div class="section" id="careers">
-	<h2>Current openings</h2>
+<div class="section" id="careers_introduction">
+	<h2>Join Us!</h2>
+        <p>Be part of a diverse and global team, working toward our mission to build global capacity in essential data and computational skills for conduting efficient, open, and reproducible research.</p>
+</div>
+<div class="section" id="current_openings">
+	<h2>Current Openings</h2>
 
-        <h3>Director of Technology</h3>
-        <p>Some text here</p>
+        <h3>Communications Coordinator</h3>
+        <p>Include Job Summary TEXT HERE</p>
+        <a href="#" class="btn btn-primary">Learn more about this position</a>
 
-        <h3>Infrastructure Manager</h3>
-        <p>Some text here</p>
 
+        <!--Example Job Posting. COPY the code in the comment below & PASTE above. DO NOT DELETE OR OVERWRITE. -->
+        <!--  
+        <h3>Communications Coordinator</h3>
+        <p>Include Job Summary TEXT HERE</p>
+        <a href="#" class="btn btn-primary">Learn more about this position</a>
+-->      
+        <!--Include the message below when no openings are posted. DO NOT DELETE THIS NOTE -->
+        <!--  
+        <br>
+        <p class="text-muted text-center">Job openings with The Carpentries will be listed here when available.</p>
+-->
+        <!--Include the message below at all times. -->
+        <h4>No Openings That Fit?</h4>
+        <p>New job openings are shared in The Carpentries Clippings (Newsletter) and on our #jobs slack channel.</p>
+        <a href="https://carpentries.us14.list-manage.com/subscribe?u=46d7513c798c6bd41e5f58f4a&id=50c3e6d6fe" class="btn btn-secondary">Subscribe to the Newsletter</a>
+        <br>
+        <a href="https://swc-slack-invite.herokuapp.com/" class="btn btn-secondary">Join The Carpentries Slack</a>
 </div>
