--- a/about-us/contact-us.html
+++ b/about-us/contact-us.html
@@ -5,5 +5,48 @@ breadcrumb: Contact us
 ---
 <div class="section" id="by_email">
 	<h2>By Email</h2>
-	<p>We are available at <a href="mailto:team@carpentries.org">team@carpentries.org</a> to answer all your questions.</p>
+	<p>General Enquiries & Questions:</p>
+	<a href="mailto:team@carpentries.org" class="underline">team@carpentries.org</a>
+	<br>
+	<p>Community Development:</p>
+	<a href="mailto:community@carpentries.org" class="underline">community@carpentries.org/a>
+	<br>
+	<p>Instructor Training & Trainer Training:</p>
+	<a href="mailto:instructor.training@carpentries.org" class="underline">instructor.training@carpentries.org</a>
+	<br>
+	<p>Membership:</p>
+	<a href="mailto:membership@carpentries.org" class="underline">membership@carpentries.org</a>
+	<br>
+	<p>Workshops:</p>
+	<a href="mailto:workshops@carpentries.org" class="underline">workshops@carpentries.or</a>
+	<br>
+	<p>Code of Conduct Committee:</p>
+	<a href="mailto:coc@carpentries.org" class="underline">coc@carpentries.org</a>
+	<br>
+</div>
+<div class="section" id="by_slack">
+	<h2>By Slack</h2>
+	<p><a href="https://swc-slack-invite.herokuapp.com/" class="underline">Join our Slack organisation</a> to connect with The Carpentries community members and staff.</p>
+</div>
+<div class="section" id="by_mail">
+	<h2>By Mail</h2>
+	<p>The Carpentries<br/>
+		c/o Community Initiatives<br/>
+		1000 Broadway, Suite #480<br/>
+		Oakland, CA 94607<br/>
+		USA</p>
+		<br>
+</div>
+<div class="section" id="on_social_media">
+	<ul>
+		<li><a href="https://twitter.com/thecarpentries?ref_src=twsrc%5Etfw" class="underline">The Carpentries Twitter</a></li>
+		<ul>
+			<li><a href="https://twitter.com/datacarpentry?ref_src=twsrc%5Etfw" class="underline">Data Carpentries - Twitter</a></li>
+			<li><a href="https://twitter.com/swcarpentry?ref_src=twsrc%5Etfw" class="underline">Software Carpentry - Twitter</a></li>
+			<li><a href="https://twitter.com/libcarpentry?ref_src=twsrc%5Etfw" class="underline">Library Carpentry - Twitter</a></li>
+		</ul>		
+		<li><a href="https://www.facebook.com/carpentries/" class="underline">Facebook</a></li>
+		<li><a href="https://www.linkedin.com/company/the-carpentries/" class="underline">LinkedIn</a></li>
+		<li><a href="https://fosstodon.org/@thecarpentries" class="underline">Mastodon</a></li>
+	</ul>
 </div>
