--- a/about-us/governance.html
+++ b/about-us/governance.html
@@ -4,7 +4,48 @@ title: Governance
 breadcrumb: Governance
 ---
 
-<div class="section" id="introduction">
-	<h2>Introduction to our governance</h2>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+<div class="section" id="governance_introduction">
+	<h2>Introduction</h2>
+	<p>The governing body of the The Carpentries is the Executive Council. The nine member Council includes representation from The Carpentries community and others, with four elected positions by the community, and five appointed from the Executive Council.</p>
+	<h3>Roles and Responsibilities of the Executive Council</h3>
+	<p>As the highest leadership body of The Carpentries, The Executive Council is responsible for:</p>
+	<ul>
+		<li>Strategic and organisational planning</li>
+		<li>Financial oversight</li>
+		<li>Hiring and performance of the Excecutive Director</li>
+		<li>Approval and assessment of The Carpentries programs and services</li>
+		<li>Advocacy</li>
+	</ul>
+	<p>The Executive Council executes these responsibilities through a combination of quarterly Executive Council meetings and regular correspondence and collaboration via email and online platforms.</p>
+</div>
+<div class="section" id="strategic_plan">
+	<h2>Strategic Plan</h2>
+	<p>The Carpentries Strategic Plan was developed and approved by the Executive Council, with support from the Core Team, in January 2020. The Strategic Plan lays out six broad goals, each with its rationale and underlying objectives, that will serve as touchpoints to guide our future actions. The idea is to provide a general framework for the direction of this organisation for the next 3-5 years.</p>
+		<a href="#" class="btn btn-secondary">View the Strategic Plan</a>
+</div>
+<div class="section" id="bylaws">
+	<h2>Bylaws</h2>
+	<p>The Carpentries operates under in accordance with our Bylaws as set forth and under the oversight of The Executive Council.</p>
+	<a href="#" class="btn btn-secondary">View The Carpentries Bylaws</a>
+</div>
+<div class="section" id="ec_working_on">
+	<h2>What is the Executive Council working on?</h2>
+		<p>The Executive Council shares their work via publichly posted meeting minutes and yearly summary reports:</p>
+		<ul>
+			<li><a href="https://github.com/carpentries/executive-council-info/tree/main/minutes" class="underline">Executive Council Meeting Minutes</a></li>
+			<li><a href="https://github.com/carpentries/executive-council-info/tree/main/year-in-review" class="underline">Executive Council Yearly Summaries</a></li>
+		</ul>
+</div>
+	<div class="section" id="executive_council_members">
+	<h2>Executive Council Members</h2>
+	<p>ADD EC FEED HERE</p>
+</div>
+<div class="section" id="contacting_the_executive_council">
+	<h2>Contacting the Executive Council</h2>
+	<p>If you have a question or concern for the Executive Council (EC), there are three ways to contact members of The Executive Council:</p>
+	<ul>
+		<li><a href="https://github.com/carpentries/executive-council-info/issues" class="underline">File an issue in the EC's repository.</a> This is appropriate if you would like to solicit additional community feedback on a topic of general interest to the community.</li>
+		<li><a href="mailto:carpentries-executive-council@carpentries.org" class="underline">Send us an email.</a> This is appropriate for communicating directly with the Executive Council but not the rest of our community.</li>
+		<li><a href="https://docs.google.com/forms/d/e/1FAIpQLScoIv2jhTLjOe-ToILpKtaPVDT01xpxQUbZ4oZXTgCKNX1e4A/viewform" class="underline">Submit a feedback form.</a> This is preferable if you would like confidential communication with the Executive Council, or if you would like to remain anonymous.</li>
+	</ul>
 </div>
