--- a/about-us/impact.html
+++ b/about-us/impact.html
@@ -4,7 +4,87 @@ title: Our Impact
 breadcrumb: Impact
 ---
 
-<div class="section" id="our_impact">
-<h2>Some title</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+<div class="section" id="impact_introduction">
+    <h2>Introduction</h2>
+    <p>At The Carpentries we are “Always Learning”. We embody the growth mindset we teach using data and community feedback to measure our impact and foster continuous improvement.</p>
+    <div class="row statistics about-us">
+		<div class="col-md-4 stat">
+			{% asset blob-left class="blob" alt:'' %}
+			<div class="wrapper">
+				<p class="stat-text">More than</p>
+				<p class="stat-number">3,000</p>
+				<p class="stat-text">instructors</p>
+			</div>
+		</div>
+		<div class="col-md-4 stat">
+			{% asset blob-middle class="blob" alt:'' %}
+			<div class="wrapper">
+				<p class="stat-text">Almost</p>
+				<p class="stat-number">8,000</p>
+				<p class="stat-text">learners</p>
+			</div>
+		</div>
+		<div class="col-md-4 stat">
+			{% asset blob-right class="blob" alt:'' %}
+			<div class="wrapper">
+				<p class="stat-text">More than</p>
+				<p class="stat-number">150</p>
+				<p class="stat-text">countries</p>
+			</div>
+		</div>
+	</div>
 </div>
+<div class="section" id="annual_reports">
+	<h2>Annual Reports</h2>
+	<p>Our annual reports serve as a high-level summary of The Carpentries work, providing a succinct introduction to our organisation for potential funders, new members, and others joining our community. These reports also serve as a rich resource for our existing community members, showcasing the work and growth of our community and providing a summary of the previous year, and what we plan to achieve in the coming year. Our annual reports also include a short overview of our finances for the year.</p>
+	<ul>
+		<li><a href="#" class="underline">Annual Report, 2021 (pdf)</a></li>
+		<li><a href="#" class="underline">Annual Report, 2020 (pdf)</a></li>
+		<li><a href="#" class="underline">Annual Report, 2020 (HTML))</a></li>
+		<li><a href="#" class="underline">Annual Report, 2019 (pdf)</a> // <a href="#" class="underline">Zenodo record</a></li>
+		<li><a href="#" class="underline">Annual Report, 2021 (pdf)</a></li>
+		<li><a href="#" class="underline">Annual Report, 2020 (pdf)</a></li>
+	</ul>
+	<br>
+	<h3>Referencing Annual Reports</h3>
+	<p>Our annual reports are published under a <a href="https://creativecommons.org/licenses/by/4.0/legalcode" class="underline">Creative Commons Attribution 4.0 International license</a>. Artistic images and photographs are licensed to the image creators as described in each report.</p>
+</div>
+<div class="section" id="impact_reports">
+    <h2>Other Impact Reports</h2>
+    <ul>
+		<li><a href="https://doi.org/10.5281/zenodo.1402200" class="underline">Analysis of The Carpentries Long-Term Impact Survey (2018-07-17)</a></li>
+        <li><a href="https://doi.org/10.5281/zenodo.1039944" class="underline">Carpentries’ Long-Term Feedback Survey Report (2017-10-31)</a></li>
+        <li><a href="https://zenodo.org/record/1325464#.W2KGvNIzY2x" class="underline">Analysis of Software and Data Carpentry’s Pre- and Post-Workshop Surveys - Full report (2018-07-17)</a></li>
+		<li><a href="https://doi.org/10.5281/zenodo.1043533" class="underline">Analysis of Software Carpentry’s Post-Workshop Surveys (2017-07-01)</a></li>
+		<li><a href="https://doi.org/10.5281/zenodo.165858" class="underline">Post-Workshop Survey Report (2016-10-20)</a></li>
+		<li><a href="https://zenodo.org/record/3728205#.XoOlTnVKjRZ" class="underline">Analysis of The Carpentries Long-Term Surveys (April 2020)</a> This report is also available as a webpage via Github (<a href="https://carpentries.github.io/assessment/learner-assessment/reports/2020-01-long-term-report.html" class="underline">View the report as a webpage</a>).</li>
+	</ul>
+</div>
+<div class="section" id="assessment">
+    <h2>Assessment</h2>
+    <p>We value a culture of assessment, and consistently assess learner outcomes from workshops (short term), programmatic efforts (instructor training), and the long-term impact we have on learners.</p>
+    <h3>Measuring the Impact of Our Workshops and Trainings</h3>
+    <p>We conduct pre- and post- workshop surveys for Carpentries Workshops & Instructor Training Events. Use the links below to preview the questions currently included in our surveys:</p>
+    <ul>
+        <li>The Carpentries Workshop Surveys</li>
+        <ul>
+            <li><a href="https://carpentries.github.io/assessment-archives/pre-workshop/pre-workshop.html" class="btn btn-secondary">Preview the Pre-Workshop Survey</a></li>
+            <li><a href="https://carpentries.github.io/assessment-archives/post-workshop/post-workshop.html" class="btn btn-secondary">Preview the Post-Workshop Survey</a></li>
+        </ul>
+        <li>The Carpentries Instructor Training Surveys</li>
+        <ul>
+            <li><a href="https://carpentries.github.io/assessment-archives/instructor-training-pre/instructor-training-pre.html" class="btn btn-secondary">Preview the Pre-Training Survey</a></li>
+            <li><a href="https://carpentries.github.io/assessment-archives/instructor-training-post/instructor-training-post.html" class="btn btn-secondary">Preview the Post-Training Survey</a></li>
+        </ul>
+    </ul>
+    <h3>Measuring the Long-Term Impact of Our Workshops</h3>
+    <p>We launched a Long-Term Impact Survey in 2017 to evaluate the long term impact our workshops are having on Carpentries Learners. Data is collected every six months.Use the below to preview the questions currently included in our long-term survey:</p>
+    <ul>
+        <li><a href="https://carpentries.github.io/assessment-archives/long-term/long-term.html" class="btn btn-secondary">Preview the Long Term Impact Survey</a></li>
+    </ul>
+    <h3>Data</h3>
+    <p>We openly share our data, source code and analyses used in our assessment practices in our Assessment Repository.</p>
+    <ul>
+        <li><a href="https://github.com/carpentries/assessment" class="btn btn-secondary">View Data on the Assessment Repository</a></li>
+    </ul>
+</div
