--- a/about-us/publications.html
+++ b/about-us/publications.html
@@ -3,8 +3,68 @@ layout: about_us
 title: Publications
 breadcrumb: Publications
 ---
-<div class="section" id="publications">
-	<h2>Our annual reports</h2>
-	<p>The Carpentries is a mission-driven nonprofit that teaches foundational coding and data science skills to researchers worldwide. We’re a diverse group of people spread out all over the world. Note: use this div to explain in plain language who The Carpentries is.</p>
-	<p>The Carpentries is composed of three lesson programs: Data Carpentry, Software Carpentry, and Library Carpentry. Explain briefly what this means.</p>
+<div class="section" id="zenodo">
+	<h2>The Carpentries on Zenodo</h2>
+	<p>We use Zenodo to publish lesson releases and various other documents, such as Annual Reports, conference reports, and other material relating to The Carpentries and the individual lesson programs. Follow the links below to browse the resources published in each Zenodo community:</p>
+	<ul>
+		<li><a href="https://zenodo.org/communities/carpentries/" class="underline">The Carpentries Zenodo</a></li>
+		<li><a href="https://zenodo.org/communities/swcarpentry/" class="underline">Software Carpentry Zenodo</a></li>
+		<li><a href="https://zenodo.org/communities/library-carpentry/" class="underline">Library Carpentry Zenodo</a></li>
+		<li><a href="https://zenodo.org/communities/datacarpentry/" class="underline">Data Carpenty Zenodo</a></li>
+	</ul>
 </div>
+<div class="section" id="publications_citations">
+	<h2>Publications about and by The Carpentries</h2>
+	<p>The Carpentries Lesson Programs (Data Carpentry, Library Carpentry and Software Carpentry) have been featured in many publications. In addition, some members of The Carpentries community have written materials about our workshops, our history, and our impact.</p>
+	<ul>
+		<li>2022</li>
+		<ul>
+			<li>Tami Albin, Jamene Brooks-Kieffer: "<a href="https://www.journalofplayinadulthood.org.uk/article/id/1030/" class="underline">Git going with LEGO: A playful partnership for making sense of technology</a>", December 2022</li>
+		</ul>		
+		<li>2018</li>
+		<ul>
+			<li>Sarah L. R. Stevens, Mateusz Kuzak, Carlos Martinez, Aurelia Moser, Petra Bleeker, Marc Galland: "<a href="https://journals.plos.org/plosbiology/article/authors?id=10.1371/journal.pbio.2005561" class="underline">Building a local community of practice in scientific programming for life scientists</a>", November 2018</li>
+		</ul>
+		<li>2016</li>
+		<ul>
+			<li>Beth Duckles: "<a href="https://software-carpentry.org/files/bib/duckles-instructor-engagement-2016.pdf" class="underline">Value of Software Carpentry to Instructors</a>", 2016</li>
+			<li>Beth Duckles: "<a href="https://software-carpentry.org/files/bib/duckles-non-instructor-report-2016.pdf" class="underline">Non-Teaching Instructor Report</a>", 2016</li>
+			<li>John D. Blischak, Emily R. Davenport, and Greg Wilson: "<a href="http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1004668" class="underline">A Quick Introduction to Version Control with Git and GitHub</a>" PLoS Computational Biology, 2016.</li>
+			<li>Yasset Perez-Riverol, Laurent Gatto, Rui Wang, Timo Sachsenberg, Julian Uszkoreit, Felipe da Veiga Leprevost, Christian Fufezan, Tobias Ternent, Stephen J. Eglen, Daniel S. Katz, Tom J. Pollard, Alexander Konovalov, Robert M. Flight, Kai Blin and Juan Antonio Vizcaíno: "<a href="http://dx.doi.org/10.1371/journal.pcbi.1004947" class="underline">Ten Simple Rules for Taking Advantage of Git and GitHub</a>" PLoS Computational Biology 12(7): e1004947, 2016.</li>
+		</ul>
+		<li>2015</li>
+		<ul>
+			<li>Edmund Hart, Pauline Barmby, David LeBauer, François Michonneau, Sarah Mount, Timothée Poisot, Kara H. Woo, Naupaka Zimmerman, and Jeffrey W Hollister: "<a href="https://peerj.com/preprints/1448/" class="underline">Ten Simple Rules for Digital Data Storage</a>" PeerJ PrePrints, 2015.</li>
+			<li>Damien Irving: "<a href="http://journals.ametsoc.org/doi/abs/10.1175/BAMS-D-15-00010.1" class="underline">A minimum standard for publishing computational results in the weather and climate sciences</a>", 2015.</li>
+			<li>Christian T. Jacobs, Gerard J. Gorman, and Lorraine Craig: "<a href="http://arxiv.org/abs/1505.05425" class="underline">Experiences with efficient methodologies for teaching computer programming to geoscientists</a>", 2015.</li>
+			<li>Ashley Shade and Tracy K. Teal: "<a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4658184/" class="underline">Computing Workflows for Biologists: A Roadmap</a>" PLoS Biology, 2015</li>
+			<li>Alexandra Simperler and Greg Wilson "<a href="http://arxiv.org/abs/1506.02575" class="underline">Software Carpentry: Get More Done in Less Time</a>" 2015.</li>
+			<li>Tracy K. Teal, Karen A. Cranston, Hilmar Lapp, Ethan White, Greg Wilson, Karthik Ram, and Aleksandra Pawlik: "<a href="http://ijdc.net/index.php/ijdc/article/view/10.1.135" class="underline">Data Carpentry: Workshops to Increase Data Literacy for Researchers</a>" International Journal of Digital Curation, 2015.</li>
+		</ul>
+		<li>2014</li>
+		<ul>
+			<li>Matthew Gentzkow and Jesse Shapiro: "<a href="https://people.stanford.edu/gentzkow/sites/default/files/codeanddata.pdf" class="underline">Code and Data for the Social Sciences: A Practitioner's Guide</a>", 2014.</li>
+			<li>Marian Petre and Greg Wilson: "<a href="http://arxiv.org/abs/1407.5648" class="underline">Code Review For and By Scientists</a>Proc. 2nd Workshop on Sustainable Software for Science: Practice and Experience, 2014.</li>
+			<li>Jory Schossau and Greg Wilson: "<a href="http://arxiv.org/abs/1407.6220" class="underline">Which Sustainable Software Practices Do Scientists Find Most Useful?</a>" Proc. 2nd Workshop on Sustainable Software for Science: Practice and Experience, 2014.</li>
+			<li>Greg Wilson: "<a href="http://f1000research.com/articles/3-62/v2" class="underline">Software Carpentry: Lessons Learned</a>" F1000 Research, 2014.</li>
+			<li>Greg Wilson, D. A. Aruliah, C. Titus Brown, Neil P. Chue Hong, Matt Davis, Richard T. Guy, Steven H. D. Haddock, Kathryn D. Huff, Ian M. Mitchell, Mark D. Plumbley, Ben Waugh, Ethan P. White, and Paul Wilson: "<a href="http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001745" class="underline">Best Practices for Scientific Computing</a>" PLoS Biology, 2014.</li>
+		</ul>
+		<li>2013</li>
+		<ul>
+			<li>Ethan P. White, Elita Baldridge, Zachary T. Brym, Kenneth J. Locey, Daniel J. McGlinn, and Sarah R. Supp: "<a href="https://peerj.com/preprints/7/" class="underline">Nine Simple Ways to Make It Easier to (Re)use Your Data</a>" PeerJ PrePrints, 2013.</li>
+			<li>Hadley Wickham: "<a href="http://www.jstatsoft.org/index.php/jss/article/view/v059i10/" class="underline">Tidy Data</a>" Journal of Statistical Software, 2013</li>
+		</ul>
+		<li>2012</li>
+		<ul>
+			<li>Jorge Aranda: "<a href="https://software-carpentry.org/files/bib/aranda-assessment-2012-07.pdf" class="underline">Software Carpentry Assessment Report</a>", July 2012.</li>
+			<li>Jo Erskine Hannay, Hans Petter Langtangen, Carolyn MacLeod, Dietmar Pfahl, Janice Singer, and Greg Wilson: "<a href="https://software-carpentry.org/files/bib/secse-survey-2009.pdf" class="underline">How Do Scientists Develop and Use Scientific Software?</a>" Proc. 2009 ICSE Workshop on Software Engineering for Computational Science and Engineering, 2009.</li>
+			<li>Julie Libarkin: "<a href="https://software-carpentry.org/files/bib/libarkin-assessment-report-2012-06.pdf" class="underline">Software Carpentry Workshop Evaluation</a>", June 2012.</li>
+		</ul>
+		<li>2009</li>
+		<ul>
+			<li>William Stafford Noble: "<a href="http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1000424" class="underline">A Quick Guide to Organizing Computational Biology Projects.</a>" PLoS Computational Biology, 2009.</li>
+		</ul>
+	</ul>
+</div>
+<hr/>
+<p class="small">Do you know about other works that should be listed here? If so, please email <a href="mailto:team@carpentries.org" class="underline">team@carpentries.org</a> to let us know.</p>
