--- a/about-us/team.html
+++ b/about-us/team.html
@@ -4,9 +4,7 @@ title: Our Team
 breadcrumb: Team
 ---
 <div class="section" id="core_team">
-<h2>The Carpentries Core Team</h2>
-</div>
-
-<div class="section" id="strategic_partners">
-<h2>The Carpentries Strategic Partners</h2>
+    <h2>The Carpentries Core Team</h2>
+    <p>Meet Carpentries staff and others who work with us.</p>
+    <p>NOTE TO PULL IN PHOTOS & INFO FOR CORE TEAM</p>
 </div>
