--- a/about-us/values.html
+++ b/about-us/values.html
@@ -3,8 +3,12 @@ layout: about_us
 title: The Carpentries Values
 breadcrumb: Values
 ---
-<div class="section" id="our_values">
-	<h2>Our values</h2>
+<div class="section" id="values_introduction">
+	<h2>Introduction</h2>
+	<p>Shared values and goals have long been the starting point of communities of practice as they identify changes they want to see and start working together towards these changes. The Carpentries community share nine core values. </p>
+</div>
+<div class="section" id="values">
+	<h2>At The Carpentries we…</h2>
 	<p>Our nine core values are as follows:</p>
 	<h3>Act openly</h3>
 	<p>Transparency, honesty, and fairness are keys to fostering trust within our open community.</p>
@@ -26,4 +30,4 @@ breadcrumb: Values
 	<p>We empower a diverse group of people to work with data and code to answer the questions important to them and address challenges in science and society.</p>
 </div>
 <hr/>
-<p class="small">Our values were formalized in 2019 by the Values Task Force. For more details, see the complete report here.</p>
+<p class="small">Our values were formalized in 2019 by the Values Task Force. For more details, see the <a href="https://github.com/carpentries/task-forces/blob/main/2019/articulating-the-carpentries-values/2019-11-carpentries-values-summary.md" class="underline">complete report here</a>.</p>
