updates to sample core team assets

--- a/assets.html
+++ b/assets.html
@@ -5,12 +5,11 @@ title: Table of Contents
 
 This page is for assets which are included without a complete asset tag. This page ensures that jekyll-assets knows they're being used and copies them over during the build process. Any assets used on the site that aren't used in the context of an asset tag should be included below.
 
-{% asset AngeliqueTruslerPhD %}
-{% asset KellyBarnes %}
-{% asset KarenWord %}
-{% asset ErinBecker %}
+{% asset core_team/AngeliqueTruslerPhD %}
+{% asset core_team/KarenWord %}
+{% asset core_team/ErinBecker %}
 {% asset JennaJordan %}
-{% asset KariLJordan %}
+{% asset core_team/KariLJordan %}
 {% asset ExecutiveCouncil %}
 {% asset ethan-white %}
 {% asset workshops-photo %}
