update about us top menu and sidebar

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -1,7 +1,7 @@
 ---
 layout: about_us
 title: About The Carpentries
-breadcrumb: About The Carpentries
+breadcrumb: About Us
 ---
 <div class="section" id="about_introduction">
 	<h2>Introduction</h2>
