update link class

--- a/support/sponsorship.html
+++ b/support/sponsorship.html
@@ -117,7 +117,7 @@ breadcrumb: Sponsorship
 	</ul>
 	<h3>CarpentryCon Registration, Sponsor Table, & Recognition</h3>
 	<ul class="list-unstyled mb-0"><li class="checked-chip">Empowerment</li><li class="checked-chip">Champion</li></ul>
-	<p>Registration to attend The Carpentries biennial meeting (~300 people), <a href="https://carpentrycon.org/">CarpentryCon</a>, to be held in-person or virtually. Sponsor name and logo on conference marketing material.</p>
+	<p>Registration to attend The Carpentries biennial meeting (~300 people), <a href="https://carpentrycon.org/" class="underline">CarpentryCon</a>, to be held in-person or virtually. Sponsor name and logo on conference marketing material.</p>
 	<ul>
 		<li>Empowerment Sponsor: 3 registrations, 1 keynote presentation, 1 sponsorship table</li>
 		<li>Champion: 2 registrations, 1 sponsorship table</li>
@@ -135,7 +135,7 @@ breadcrumb: Sponsorship
 	<ul class="list-unstyled mb-0"><li class="checked-chip">Empowerment</li></ul>
 	<p>Attend one Data, Software, or Library Carpentry workshop (in-person or virtual where available).</p>
     <br>
-    <p>If you have any questions please contact us at <a class="link underline" href="mailto:sponsorship@carpentries.org">sponsorship@carpentries.org</a></p>
+    <p>If you have any questions please contact us at <a class="underline" href="mailto:sponsorship@carpentries.org">sponsorship@carpentries.org</a></p>
 	<a href="https://carpentries.typeform.com/to/EQdv1Qx4?typeform-source=carpentries.org" class="btn btn-primary">Apply to become a sponsor</a>
 </div>
 <hr/>
